Nota: Commit teste, algumas correções básicas de uso.

--- a/Teste 31.10 - Local Server - App/app/GUI/ListBeacons.fmx
+++ b/Teste 31.10 - Local Server - App/app/GUI/ListBeacons.fmx
@@ -23,6 +23,7 @@ object ListBeaconsForm: TListBeaconsForm
       Size.PlatformDefault = False
       StyleLookup = 'priortoolbutton'
       Text = 'SpeedButton1'
+      OnClick = SpeedButton1Click
     end
   end
   object ToolBar2: TToolBar
