AdiAdicionado formulário para cadastro de ponto de onibus

--- a/MobileBus/app/Main.LgXhdpiPh.fmx
+++ b/MobileBus/app/Main.LgXhdpiPh.fmx
@@ -38,6 +38,9 @@ inherited frmPrincipal_LgXhdpiPh: TfrmPrincipal_LgXhdpiPh
           inherited BtnCadastrarSelecionado: TButton
             Size.Width = 450.000000000000000000
           end
+          inherited BtnAddBusStop: TButton
+            Size.Width = 450.000000000000000000
+          end
         end
         inherited Panel1: TPanel
           Size.Width = 450.000000000000000000
@@ -68,6 +71,82 @@ inherited frmPrincipal_LgXhdpiPh: TfrmPrincipal_LgXhdpiPh
         inherited Image1: TImage
           MultiResBitmap.Height = 64
           MultiResBitmap.Width = 64
+          MultiResBitmap = <
+            item
+              Width = 64
+              Height = 64
+              PNG = {
+                89504E470D0A1A0A0000000D4948445200000040000000400806000000AA6971
+                DE000000017352474200AECE1CE90000000467414D410000B18F0BFC61050000
+                082B49444154785ED59B7F8C5C5515C7BFF7BED95FB6DD99D9B616BA2B9A6004
+                91448DF0879AE01F4AF027FC4104FC190DC1C8EE0C8DA94663ADA436181536B2
+                9DDD456BA485D6B45031A8A4D2A631D2A410158C268042AC5158B7A5B433D3ED
+                8FEDECCCBBD773DF3B3BBFB7CCBC77DFDBF849DEDB73EE9D777F9C7BEFB9F7BE
+                FB56202E465F5B09D17B03203E4EDAE590EA5240AEF723D52C943C46C25140EF
+                875E3880E97567FDB86889DE007715DF0785CD10DA54BE9F43DF007D015A1C80
+                C4566C4B3DC78191109D0146F36F8523BE0FFCF733C048C07C663430BC07AEFE
+                36A687FEC3815689C60063F91BA97BEFA6165CC5218DB8A505A8BE13E8718F7B
+                7AD9B904B2F466387DBD9EDE8CC219BA7D1E5343BFE1106BD83740B6B8895A6E
+                6B4BABEBF24920F108E5F8188EA70E639F7039C6E7D3DAC125C5EBA0713350B9
+                15A2670DC730A6378C6C462E750F0758C1AE0132852D10E2BBACF998D6131887
+                2A8D77ECD88CC3947D1BC9181B5B7A91D6DFC364FA6ED64263CF00D9E22D747F
+                C457AAFC0D42DD886D43AFB0DE1D77E52F8396A6DBBFDB0FA8722BF58447590E
+                851D038C9E7A174ACE9FF1260C7008A19F40EF85DB307EE9394F35BFE9913D9E
+                FC46945519D3AB5FF0E48DC75660A17F2F15F5939E6E388F79F4B9D7567F1302
+                3B06C8147E475DFFA3AC11EEB3489CBB0E3FBE6CDEABB870F65257BE9A234FD3
+                F56F5F6CE16D74253D49E17968F736AF925F7B650095158701E71A2FCE431D40
+                6EA82ECF6048FE1B9C4CF1230D955FA8BC0EA56EF22A6F709C0D7595A78E5139
+                45F73FB4BDFC381FF38C79D660D232699AB4ABC81BBCBC4312BE07640B4F5332
+                EF67CD304AE3F301964DFCDFE97E1073A96FFA011DB2AAF8232ADDF5C8A5DFC9
+                21C6CFDC49F7695F31E86728FE03AC04229C01C65E5F0FF9DA4C75CA53EA25AC
+                495F8D2DA2E2E986B1FC3F20E44E4CA67EC0219D91297E0B5A7D89E6FE2B3904
+                B85B2770B2F03CA4BCC20FA0A951AD1BC1D4DA595FEF9E7043C0E921C75437DF
+                0BF1B386CADBC6A46DF2A842797B65084E3803687C82251F257ECD527434E7D1
+                5C862E09E904F53B58A0C55BE528A653FF642D3A4C1E26AF2A75650840480388
+                1116683824969ADA08BD9285CE11BAFD3EC2D090575D190210DC09664F0ED2DA
+                DECCE93E5AEFA225EA1759AB619CA0EFB46ABFED8CA4E754EB9DE02299C2C3E4
+                0BBEC01A5052296C1FEA367D8FE03D403A4DCF6A7FDE5F1AB3C0E9E6BA084D79
+                F525DAEF223B20B80126D2452A88BF9D3508C16F7762A021AF7365E456D14E33
+                18E17C80126691E3E38A61965A714B79F2D63F6CB830D3B81D067634FE46D7D2
+                6EA63E2F77C531E33058EB9A700BA16C618A9218F5156A89D2C0DA96B1687C80
+                A1792C7FEEE4050C25FA58A3A6D0EFA55EF557D628EDFC5EDA0FBCA7E5B9AFE4
+                93E89BA725F10ADE5885DB13849D05FCCA795081FAE5C7586944CEBE1D77E68F
+                375CF59537A8F2A18678889B38A6112F8FC5CA1BC441160211D6008D2F2C5D7C
+                96A51A525EA0159B83845CD770B5D0BBBA315EF4FBCF36D19287F3240B810867
+                80DCE03374AFBDAC94F814B2A79B372787F86F235AE768AC7FB57A41BDCC31F5
+                985D620D93B6C9631157BF48657891B54084ED019A2AB29B1546DD479B965ABA
+                73C9EFD036F75FAC1966BDF95DEAE7E0E83F562F2D5F4019B4B15A64E1147AE7
+                37B16236429426A55D8F237EC25260C23941C386D35740E93A5F4068DC47BBBF
+                6FB0468EB0700452F83D43E3168ADBE7C9CD8C15AFA726F1C7B431DAE49ACB3D
+                D99029DE4BA5FD3A6B86F3B4005A1F7401B448C81E404C245FA296F9136B3EA6
+                A099C21DAC11620355FC7EBA36E14CF2B71CD8CA89E4EFA9475125F53668E776
+                0E352BBF3B9A2A6FD813B6F286F03DC0902D8ED17DD257EAD0FA1E6AEDCDDE50
+                098416D4F25B69E1531B0A8B085C63E3D4C88E01C64EAF863C4B0B92FAE989D1
+                FA49086763D7CE2A3B7715B43B4E956F33C7BBCF22B7FA5A564261C700864CF1
+                714AADFDDCEDADFA467641AA1D984D1F69391459C41C8EAC2F7C104A7E999EA1
+                CD0E4D9F6DD1B723977E909550D833C058E1667274BF646D69CC0991E8798AFC
+                C1ABA4F0AB2C5ADB0BBC85E23ED47A22D4C4028AD0E786B17DF83C8784C29E01
+                B28A5676276818F4A7392422C841E6D2FEDB620B849F0516C9C912ADE6AC9CD6
+                5C14E9849EFBEBB16700834EEC62291A149EC2C4E0D2BBC400D835C0E4E091C6
+                F775967160B5F50D760D6048384D4B635BB827904EFE8A156BD837004444C340
+                3E882D6281156BD837402E7594F6064FB3668799194525FD296B5689A0071042
+                3CCC921D46860F60227D91D7EEC189C6002E1E45BE42D3A22D74EDB0D532D118
+                E0815401438927580BCBAB389EDECFB275A2318087B2E30C35B62FB977B04074
+                062899565BA87DF01084B9420589C4CF598B84E80CB05D94A17BF6B2168C95E9
+                C771FF4AF3096D644438040C216703475B5FF935636F37B814B5C3D12E512FD3
+                AEEF4A2A62E0539F4E88B8071052067386CA7C0B146DE50DD11BC055B437309F
+                B976C559EFED510C446F00F395B71A39CC5A87E89DC8AD99632552A2378041E8
+                2E8681F9F24BE658899C980CE0EEA3566D3DE76B87A675FF54B2DD315924C463
+                00AF3BEB0EBF2093DB588885780C60104E076B029AFA2607439DF6764B7C0648
+                0F1EF4DEEA5C0C6DC67EF4535F3DF119C0FB82D4D9C35A2BF398C340F921D662
+                233E0318945E7A180C6007EE5D7B86B5D888D70053E9BFD0BDCD3F39D0D4E7B6
+                395C8D81780DE0D16E4D30BC3F96CF6CDBB00C06707FE1BDE4AC478909966227
+                FADD603B32C54394F3873DD97C0F3899BECA93978165E80184AC7B5D26446CCB
+                DE762C8F012AE5C7E87EDE3BEAEE9DB7FB0AFDFF86B1C26E1A0AE3AC2D1BCBD3
+                030C42EC2407B02C535F0DE07F0B09A45FF791E4700000000049454E44AE4260
+                82}
+              FileName = 'D:\'#193'rea de Trabalho\icon.png'
+            end>
         end
         inherited Image2: TImage
           MultiResBitmap.Height = 64
