--- a/MobileBus/app/GUI/AddBusStop.fmx
+++ b/MobileBus/app/GUI/AddBusStop.fmx
@@ -7,6 +7,8 @@ object AddBusStopForm: TAddBusStopForm
   FormFactor.Width = 320
   FormFactor.Height = 480
   FormFactor.Devices = [Desktop]
+  OnCreate = FormCreate
+  OnDestroy = FormDestroy
   OnShow = FormShow
   DesignerMasterStyle = 0
   object MapView: TMapView
@@ -14,118 +16,10 @@ object AddBusStopForm: TAddBusStopForm
     Size.Width = 459.000000000000000000
     Size.Height = 440.000000000000000000
     Size.PlatformDefault = False
+    LayerOptions = [PointsOfInterest, UserLocation, Traffic]
+    OnMarkerDoubleClick = MapViewMarkerDoubleClick
     OnMapDoubleClick = MapViewMapDoubleClick
     object Image1: TImage
-      MultiResBitmap.Height = 64
-      MultiResBitmap.Width = 64
-      MultiResBitmap = <
-        item
-          Width = 64
-          Height = 64
-          PNG = {
-            89504E470D0A1A0A0000000D4948445200000040000000400806000000AA6971
-            DE000000017352474200AECE1CE90000000467414D410000B18F0BFC61050000
-            082C49444154785ED59B7F8C5C5515C7BFF7BED95FB6DD99D9B602ED8A6D3082
-            48A246F8434DF00F25F80BF88308F8331A8291DD191A538DC65A496D302A6C64
-            3BBB8BD6482BAD69A1625049A54D63A449212A184D0085588BD06C6B6967A6DB
-            1FDBD99977AFE7BE77767E6F9979EFBEB7F193BCB7E7DC3BEFFE38F7DE73EF7D
-            F7AD405C8CFC772944EF8D80F804695740AACB00B9CA8F54D350F218098701BD
-            177A6E1FA62E39EBC7454BF406B8A7F87E286C84D0A6F2FD1CFA26E80BD0621F
-            2436634BEA790E8C84E80C30927F3B1CF17DE0D5CF006B03E67344036B76C1D5
-            DFC6D4D07F38D02AD11860347F3375EF9DD482CB38A411B73407D577023DEE71
-            4F2F3B974296DE0AA7AFD7D39B513843B7CF6372E8B71C620DFB06C8163750CB
-            6D6E69755D3E09241EA51C1FC7F1D441EC112EC7F87C5A3BB8B4783D346E052A
-            B743F4ACE018C6F486B51B914BDDC70156B06B804C611384F82E6B3EA6F504C6
-            A04A631D3B36E33065DF7A32C6FA965EA4F5F73091BE97B5D0D83340B6781BDD
-            1FF5952A7F87503763CBD06BAC77C73DF9CBA1A5E9F6EFF103AADC4E3DE13196
-            4361C70023A7DE8D92F317BC05031C42E827D17BE10E8C5D76CE53CD6F7A648F
-            27BF196555C6D4F2173D79FDB12598EBDF4D45FD94A71BCE63167DEE75D5DF84
-            C08E013285DF53D7FF186B84FB1C12E7AEC78F2F9FF52A2E9CDDD495AFE1C8D3
-            74BDEA8B2DACA12BE9490A2F40BB777895FCDA6B03A82C390838D77A711E6A1F
-            724375790643F2DFE0648A1F6DA8FC5CE50D28758B577983E3ACABAB3C758CCA
-            29BAFFB1EDE5C7F99867CCB306939649D3A45D45DEE8E51D92F03D205B788692
-            F9006B86111A9F0FB16CE2FF41F7FD98497DD30FE89065C51F51E96E402EFD2E
-            0E317EE66EBA4FF98A413F4BF11F642510E10C30FAC62AC8A347AB539E522F63
-            45FA1A6C12154F378CE6FF0921B76322F5030EE98C4CF15BD0EA4B34F75FC521
-            C0BD3A8193851720E5957E004D8D6A7818932BA77DBD7BC20D01A7871C53DD7C
-            2FC4CF1A2A6F1B93B6C9A30AE5ED952138E10CA0F149967C94F80D4BD1D19C47
-            7319BA24A413D4EF6481166F95C3984AFD8BB5E8307998BCAAD4952100210D20
-            8659A0E19058686A23F452163A47E8F6FB0843435E756508407027983D39486B
-            7B33A7FB68BD8396A85F64AD867182BED3AAFDB633929E53AD7782F3640A8F90
-            2FF8026B4049A5B075A8DBF43D82F700E9343DABFD797F61CC02A79BEB2234E5
-            D59768BF8BEC80E006184F17A920FE76D62004BFDD898186BCCE95915B463BCD
-            6084F3014A98458E8F2B56B3D48A5BCA93B7FE61C385A38DDB61605BE36F742D
-            ED66EAF372971C330E83B5AE09B710CA16262989115FA196280DAC6C198BC607
-            189AC7F2E74E5EC050A28F356A0AFD3EEA557F638DD2CEEFA6FDC07B5B9EFB4A
-            3E89BE595A122FE18D55B83D41D859C0AF9C0715A85F7E9C9546E4F43B7077FE
-            78C3555F79832A1F688887B885631AF1F298AFBC41EC672110610DD0F8C2D2C5
-            6759AA21E50560D841425ED270B5D0BBBC315EF4FBCF36D19287F3140B810867
-            80DCE0B374AFBDAC94B809D9D3CD9B9303FCB711AD7334D6BF5ABDA05EE1987A
-            CC2EB18649DBE4318FAB5FA232BCC45A20C2F6004D15D9C90AA31EA04D4B2DDD
-            99E477689BFB6FD60CD3DEFC2EF5F370F49FAA97962FA20CDA58CD33770ABDB3
-            1B58311B214A93D2AEC7113F612930E19CA061DDE92BA1749D2F20341EA0DDDF
-            3758234758380429FC9EA1711BC5EDF1E466468B375093F863DA186D62C5159E
-            6CC814EFA7D27E9D35C3795A00AD0ABA009A27640F20C6932F53CBFC99351F53
-            D04CE12ED608B18E2AFE205D1B7026F93B0E6CE544F20FD4A3A8927A0BB47327
-            879A95DF5D4D9537EC0A5B7943F81E60C81647E93EE12B75687D1FB5F6466FA8
-            04420B6AF9CDB4F0A90D857904AEB5716A64C700A3A797439EA50549FDF4C468
-            FD1484B3BE6B67959DB91ADA1DA3CAB799E3DDE7905B7E1D2BA1B0630043A6F8
-            04A5D67EEEF6567DC33B20D5364CA70FB51C8ACC630E4756153E0425BF4CCFD0
-            6687A6CFB6E83B914B3FCC4A28EC1960B4702B39BA5FB1B630E68448F43C4DFE
-            E07552F85516ADED05DE46711F6E3D116A620E45E873ABB175F5790E09853D03
-            6415ADEC4ED030E84F7348449083CCA5FDB7C516083F0BCC9393255ACD5939AD
-            B928D2093DF7D763CF00069DD8C15234283C8DF1C185778901B06B8089C1438D
-            EFEB2CE3C06AEB1BEC1AC090709A96C6B6704F209DFC352BD6B06F0088888681
-            7C189BC41C2BD6B06F805CEA30ED0D9E61CD0E478E282AE94F59B34A043D8010
-            E21196ECB076CD3E8CA72FF2DA3D38D118C0C563C857685AB485AE1DB65A261A
-            033C942A6028F1246B61791DC7D37B59B64E3406F050769CA1C6D605F70E1688
-            CE0025D36A73B50F1E823053A82091F8396B91109D01B68A3274CF6ED682B134
-            FD041E5C6A3EA18D8C08878021E46CE068EB2BBF66ECED0617A27638DA25EA15
-            DAF55D45450C7CEAD30911F70042CA60CE50996F81A2ADBC217A03B88AF606E6
-            33D7AE38EBBD3D8A81E80D60BEF2566B0FB2D6217A3B722B66588994E80D6010
-            BA8B6160BEFC92395622272603B87BA8555BCFF9DAA169DD3F996C774C1609F1
-            18C0EBCEBAC32FC8E4161662211E031884D3C19A80A6BE89C150A7BDDD129F01
-            D283FBBDB73A17439BB11FFDD4574F7C06F0BE207576B1D6CA2C663050FE056B
-            B1119F010C4A2F3C0C06B00DF7AF3CC35A6CC46B80C9F45FE9DEE69F1C68EA73
-            DB1CAEC640BC06F068B72658B33796CF6CDBB00806707FE9BDE4AC4789719662
-            27FADD603B32C50394F3473CD97C0F3891BEDA93178145E80184AC7B5D26446C
-            CBDE762C8E012AE5C7E97EDE3BEAEE9DB5FB0AFDFF86D1C24E1A0A63AC2D1A8B
-            D3030C426C2707B028535F0DE07FBEEAA45FAC6B05C20000000049454E44AE42
-            6082}
-          FileName = 'D:\'#193'rea de Trabalho\icon.png'
-        end>
-      Position.X = 104.000000000000000000
-      Position.Y = 56.000000000000000000
-      Size.Width = 44.000000000000000000
-      Size.Height = 44.000000000000000000
-      Size.PlatformDefault = False
-      Visible = False
-    end
-  end
-  object ToolBar1: TToolBar
-    Size.Width = 459.000000000000000000
-    Size.Height = 40.000000000000000000
-    Size.PlatformDefault = False
-    StyleLookup = 'ToolBar1Style1'
-    TabOrder = 0
-    object SpeedButton1: TSpeedButton
-      Align = Left
-      Size.Width = 57.000000000000000000
-      Size.Height = 40.000000000000000000
-      Size.PlatformDefault = False
-      StyleLookup = 'priortoolbutton'
-      Text = 'SpeedButton1'
-      OnClick = SpeedButton1Click
-    end
-    object CbbBeacons: TComboBox
-      Position.X = 343.000000000000000000
-      Position.Y = 10.000000000000000000
-      Size.Width = 106.000000000000000000
-      Size.Height = 22.000000000000000000
-      Size.PlatformDefault = False
-      TabOrder = 1
-    end
-    object Image2: TImage
       MultiResBitmap.Height = 64
       MultiResBitmap.Width = 64
       MultiResBitmap = <
@@ -204,6 +98,116 @@ object AddBusStopForm: TAddBusStopForm
             426082}
           FileName = 'D:\'#193'rea de Trabalho\icon.png'
         end>
+      Position.X = 104.000000000000000000
+      Position.Y = 56.000000000000000000
+      Size.Width = 44.000000000000000000
+      Size.Height = 44.000000000000000000
+      Size.PlatformDefault = False
+      Visible = False
+    end
+  end
+  object ToolBar1: TToolBar
+    Size.Width = 459.000000000000000000
+    Size.Height = 40.000000000000000000
+    Size.PlatformDefault = False
+    StyleLookup = 'ToolBar1Style1'
+    TabOrder = 0
+    object SpeedButton1: TSpeedButton
+      Align = Left
+      Size.Width = 57.000000000000000000
+      Size.Height = 40.000000000000000000
+      Size.PlatformDefault = False
+      StyleLookup = 'priortoolbutton'
+      Text = 'SpeedButton1'
+      OnClick = SpeedButton1Click
+    end
+    object CbbBeacons: TComboBox
+      Position.X = 343.000000000000000000
+      Position.Y = 10.000000000000000000
+      Size.Width = 106.000000000000000000
+      Size.Height = 22.000000000000000000
+      Size.PlatformDefault = False
+      TabOrder = 1
+    end
+    object Image2: TImage
+      MultiResBitmap.Height = 64
+      MultiResBitmap.Width = 64
+      MultiResBitmap = <
+        item
+          Width = 64
+          Height = 64
+          PNG = {
+            89504E470D0A1A0A0000000D4948445200000040000000400806000000AA6971
+            DE000000017352474200AECE1CE90000000467414D410000B18F0BFC61050000
+            082C49444154785ED59B7F8C5C5515C7BFF7BED95FB6DD99D9B6026DADA66B04
+            91448DF0879AE01F4AF027FC4104FC190DC1C8EE0C8DA94663ADA436181536B2
+            9DDD456BA495D6B45031A8A4D2A631D2A410158C2680425CA2856C6B6967A6DB
+            1FDBD99977AFE7BE77767E6F9979EFBEB7F193BCB7E7DC3BEFFE38F7DE73EF7D
+            F7AD405C8CFC773944EF8D80F83869C390EA0A40AEF123D50C943C4EC234A00F
+            40CF1FC4D465E7FCB86889DE007717DF07852D10DA54BE9F43DF007D115A1C84
+            C4366C4F3DC78191109D0146F26F8523BE0FBCF2196AF080F94C6B60C35EB8FA
+            DB981AFA0F075A251A038CE66FA2EEBD875A70058734E296E6A1FA4EA2C73DE1
+            E965E772C8D29BE1F4F57A7A330A67E9F6794C0EFD9643AC61DF00D9E2666AB9
+            6D2DADAECBA780C42394E36338913A82FDC2E5189F4F6B079717AF87C62D40E5
+            36889E551CC398DE30BC05B9D4BD1C6005BB06C814B64288EFB2E6635A4F600C
+            AA34D6B163330E53F66D22636C6AE9455A7F0F13E97B580B8D3D03648BB7D2FD
+            115FA9F277087513B60F1D63BD3BEECEAF8796A6DBBFDB0FA8721BF58447590E
+            851D038C9C7E174ACE5FF0260C7008A19F40EFC5DB3176C5794F35BFE9913D9E
+            FC46945519532B5FF0E44DC79761BE7F1F15F5939E6EB88039F4B9D7557F1302
+            3B06C8147E4F5DFFA3AC11EEB3489CBF1E3F5E3FE7555C38FBA82B5FC39167E8
+            FAB72FB6F036BA929EA4F03CB47BBB57C9AF1D1B4065D911C0B9D68BF3500791
+            1BAACB331892FF062753FC4843E5E72BAF43A99BBDCA1B1C67635DE5A963544E
+            D3FD8F6D2F3FCEC73C639E3598B44C9A26ED2AF2462FEF9084EF01D9C2D394CC
+            FB59338CD0F87C906513FF0FBA1FC26CEA9B7E4087AC28FE884A770372E97772
+            88F13377D17DCA570CFA198AFF002B81086780D1D7D7401E7BAD3AE529F51256
+            A5AFC15651F174C368FE9F10721726523FE090CEC814BF05ADBE4473FF551C02
+            DCA3133855781E525EE907D0D4A8D6AFC3E4EA195FEF9E7043C0E921C75437DF
+            0BF1B386CADBC6A46DF2A842797B65084E3803687C82251F257EC3527434E7D1
+            5C862E09E904F53B58A0C55B651A53A97FB1161D260F935795BA320420A401C4
+            3A16683824169BDA08BD9C85CE11BAFD3EC2D090575D190210DC09664F0DD2DA
+            DECCE93E5AEFA625EA1759AB619CA0EFB46ABFED8CA4E754EB9DE00299C2C3E4
+            0BBEC01A505229EC18EA367D8FE03D403A4DCF6A7FDE5F1CB3C0E9E6BA044D79
+            F525DAEF223B20B801C6D3452A88BF9D3508C16F7762A021AFF365E456D04E33
+            18E17C80126691E3E38AB52CB5E296F2E4AD7FD870E1B5C6ED30B0B3F137BA96
+            7633F579B9CB8E1B87C15AD7845B08650B9394C488AF504B940656B78C45E303
+            0CCD63F973A72E6228D1C71A35857E2FF5AABFB14669E7F7D17EE03D2DCF7D25
+            9F44DF1C2D8997F1C62ADC9E20EC2CE057CE830AD42F3FC64A2372E6EDB82B7F
+            A2E1AAAFBC41950F37C443DCCC318D78792C54DE200EB11088B006687C61E9E2
+            B32CD590F222B0CE41425ED670B5D0BBB2315EF4FBCF36D19287F3240B810867
+            80DCE03374AFBDAC94F814B2679A372787F96F235AE768AC7FB57A41BDCC31F5
+            985D620D93B6C9630157BF48657891B54084ED019A2AB2871546DD4F9B965ABA
+            B3C9EFD036F715D60C33DEFC2EF57370F49FAA97962FA00CDA582D307F1ABD73
+            9B59311B214A93D2AEC7113F612930E19CA061E3992BA1749D2F2034EEA7DDDF
+            3758234758380A29FC9EA1712BC5EDF7E466468B375093F863DA186D62D5B027
+            1B32C5FBA8B45F67CD708116406B822E801608D90388F1E44BD4327F66CDC714
+            3453B89335426CA48A3F40D7669C4DFE8E035B3999FC03F528AAA4DE0EEDDCC1
+            A166E5776753E50D7BC356DE10BE0718B2C551BA4FF84A1D5ADF4BADBDC51B2A
+            81D0825A7E1B2D7C6A436101816B6D9C1AD931C0E8999590E76841523F3D315A
+            3F09E16CEADA596567AF8676C7A8F26DE678F759E4565EC74A28EC18C090293E
+            4EA9B59FBBBD55DFBADD906A2766D2475B0E45163087236B0A1F84925FA66768
+            B343D3675BF41DC8A51F622514F60C305AB8851CDDAF585B1C7342247A9E227F
+            F02A29FC2A8BD6F6026FA1B80FB59E0835318F22F4F9B5D8B1F6028784C29E01
+            B28A5676276918F4A7392422C841E6D2FEDB620B849F0516C8C912ADE6AC9CD6
+            5C12E9849EFBEBB16700834EEC66291A149EC2F8E0E2BBC400D835C0C4E0D1C6
+            F775967160B5F50D760D6048384D4B635BB827914EFE9A156BD837004444C340
+            3E84AD629E156BD837402E354D7B83A759B3C3F4B4A292FE9435AB44D0030821
+            1E66C90EC31B0E623C7D89D7EEC189C6002E1E45BE42D3A22D74EDB0D532D118
+            E0C15401438927580BCBAB38913EC0B275A2318087B2E30C35762CBA77B04074
+            062899569BAF7DF01084D9420589C4CF598B84E80CB04394A17BF6B1168CE5E9
+            C7F1C072F3096D644438040C216703475B5FF935636F37B818B5C3D12E512FD3
+            AEEF2A2A62E0539F4E88B8071052067386CA7C0B146DE50DD11BC055B437309F
+            B976C539EFED510C446F00F395B71A3EC25A87E85DC8AD9A652552A2378041E8
+            2E8681F9F24BE658899C980CE0EEA7566D3DE76B87A675FF64B2DD315924C463
+            00AF3BEB0EBF2093DB598885780C60104E076B029AFA2606439DF6764B7C0648
+            0F1EF2DEEA5C0A6DC67EF4535F3DF119C0FB82D4D9CB5A2B7398C540F917ACC5
+            467C063028BDF83018C04EDCB7FA2C6BB111AF0126D37FA57B9B7F72A0A9CF6D
+            73B81A03F11AC0A3DD9A60C381583EB36DC31218C0FDA5F792B31E25C6598A9D
+            E87783EDC8140F53CE1FF664F33DE044FA6A4F5E0296A00710B2EE759910B12D
+            7BDBB13406A8941FA3FB05EFA8BB77CEEE2BF4FF1B460B7B68288CB1B6642C4D
+            0F3008B18B1CC0924C7D3580FF016D4DA45FE0F911740000000049454E44AE42
+            6082}
+          FileName = 'D:\'#193'rea de Trabalho\icon.png'
+        end>
       Position.X = 80.000000000000000000
       Position.Y = -4.000000000000000000
       Size.Width = 44.000000000000000000
@@ -211,5 +215,9 @@ object AddBusStopForm: TAddBusStopForm
       Size.PlatformDefault = False
       Visible = False
     end
+  end
+  object LocationSensor: TLocationSensor
+    Left = 216
+    Top = 224
   end
 end
