--- a/MobileBus/app/GUI/EditConfig.LgXhdpiPh.fmx
+++ b/MobileBus/app/GUI/EditConfig.LgXhdpiPh.fmx
@@ -10,11 +10,59 @@ inherited EditConfigForm_LgXhdpiPh: TEditConfigForm_LgXhdpiPh
       Size.Height = 48.000000000000000000
     end
   end
-  inherited Panel1: TPanel
+  inherited ToolBar2: TToolBar
+    Position.Y = 647.000000000000000000
     Size.Width = 450.000000000000000000
-    Size.Height = 647.000000000000000000
-    inherited Edit5: TEdit
-      TabOrder = 7
+    Size.Height = 48.000000000000000000
+    inherited SpeedButton2: TSpeedButton
+      Size.Width = 450.000000000000000000
+      Size.Height = 48.000000000000000000
     end
+  end
+  inherited Label1: TLabel
+    Position.Y = 80.000000000000000000
+    Size.Width = 101.000000000000000000
+    Size.Height = 30.000000000000000000
+  end
+  inherited Edit1: TEdit
+    Position.X = 153.000000000000000000
+    Position.Y = 71.000000000000000000
+    Size.Width = 120.000000000000000000
+    Size.Height = 32.000000000000000000
+    Size.PlatformDefault = False
+  end
+  inherited Label2: TLabel
+    Position.Y = 128.000000000000000000
+  end
+  inherited Label3: TLabel
+    Position.Y = 168.000000000000000000
+    Size.Width = 134.000000000000000000
+  end
+  inherited Edit2: TEdit
+    Position.X = 153.000000000000000000
+    Position.Y = 117.000000000000000000
+    Size.Width = 120.000000000000000000
+    Size.Height = 32.000000000000000000
+    Size.PlatformDefault = False
+  end
+  inherited Edit3: TEdit
+    Position.X = 153.000000000000000000
+    Position.Y = 267.000000000000000000
+    Size.Width = 120.000000000000000000
+    Size.Height = 32.000000000000000000
+    Size.PlatformDefault = False
+  end
+  inherited Label4: TLabel
+    Position.X = 10.000000000000000000
+    Position.Y = 224.000000000000000000
+  end
+  inherited Edit4: TEdit
+    Size.Width = 120.000000000000000000
+    Size.Height = 32.000000000000000000
+    Size.PlatformDefault = False
+  end
+  inherited Label9: TLabel
+    Position.X = 10.000000000000000000
+    Position.Y = 271.000000000000000000
   end
 end
