--- a/MobileBus/app/GUI/EditConfig.NmXhdpiPh.fmx
+++ b/MobileBus/app/GUI/EditConfig.NmXhdpiPh.fmx
@@ -11,37 +11,49 @@ inherited EditConfigForm_NmXhdpiPh: TEditConfigForm_NmXhdpiPh
       OnClick = SpeedButton1Click
     end
   end
-  inherited Panel1: TPanel
+  inherited ToolBar2: TToolBar
+    Position.Y = 575.000000000000000000
     Size.Width = 400.000000000000000000
-    Size.Height = 567.000000000000000000
-    inherited Edit1: TEdit
-      Position.X = 169.000000000000000000
-      Position.Y = 9.000000000000000000
+    inherited SpeedButton2: TSpeedButton
+      Size.Width = 400.000000000000000000
+      Size.Height = 48.000000000000000000
     end
-    inherited Label1: TLabel
-      Size.Width = 109.000000000000000000
-    end
-    inherited Label3: TLabel
-      Size.Width = 142.000000000000000000
-    end
-    inherited Edit2: TEdit
-      Position.X = 169.000000000000000000
-      Position.Y = 47.000000000000000000
-    end
-    inherited Edit3: TEdit
-      Position.X = 172.000000000000000000
-    end
-    inherited Label4: TLabel
-      Size.Width = 137.000000000000000000
-    end
-    inherited Edit4: TEdit
-      Position.X = 169.000000000000000000
-    end
-    inherited Label9: TLabel
-      Size.Width = 147.000000000000000000
-    end
-    inherited Edit5: TEdit
-      Position.X = 161.000000000000000000
-    end
+  end
+  inherited Label1: TLabel
+    Position.Y = 72.000000000000000000
+    Size.Width = 109.000000000000000000
+  end
+  inherited Edit1: TEdit
+    Position.X = 161.000000000000000000
+  end
+  inherited Label2: TLabel
+    Position.Y = 120.000000000000000000
+  end
+  inherited Label3: TLabel
+    Position.Y = 160.000000000000000000
+    Size.Width = 142.000000000000000000
+  end
+  inherited Edit2: TEdit
+    Position.X = 161.000000000000000000
+    Position.Y = 111.000000000000000000
+  end
+  inherited Edit3: TEdit
+    Position.X = 156.000000000000000000
+    Position.Y = 163.000000000000000000
+  end
+  inherited Label4: TLabel
+    Position.Y = 208.000000000000000000
+    Size.Width = 137.000000000000000000
+  end
+  inherited Edit4: TEdit
+    Position.Y = 211.000000000000000000
+  end
+  inherited Label9: TLabel
+    Position.Y = 263.000000000000000000
+    Size.Width = 147.000000000000000000
+  end
+  inherited Edit5: TEdit
+    Position.X = 145.000000000000000000
+    Position.Y = 251.000000000000000000
   end
 end
