--- a/MobileBus/app/GUI/EditConfig.LgXhdpiPh.fmx
+++ b/MobileBus/app/GUI/EditConfig.LgXhdpiPh.fmx
@@ -5,7 +5,7 @@ inherited EditConfigForm_LgXhdpiPh: TEditConfigForm_LgXhdpiPh
   inherited ToolBar1: TToolBar
     Size.Width = 450.000000000000000000
     Size.Height = 48.000000000000000000
-    inherited SpeedButton1: TSpeedButton
+    inherited btnSair: TSpeedButton
       Size.Width = 48.000000000000000000
       Size.Height = 48.000000000000000000
     end
@@ -14,55 +14,61 @@ inherited EditConfigForm_LgXhdpiPh: TEditConfigForm_LgXhdpiPh
     Position.Y = 647.000000000000000000
     Size.Width = 450.000000000000000000
     Size.Height = 48.000000000000000000
-    inherited SpeedButton2: TSpeedButton
+    inherited btnConfirmar: TSpeedButton
       Size.Width = 450.000000000000000000
       Size.Height = 48.000000000000000000
     end
   end
-  inherited Label1: TLabel
+  inherited lbDeathTime: TLabel
     Position.Y = 80.000000000000000000
     Size.Width = 101.000000000000000000
     Size.Height = 30.000000000000000000
   end
-  inherited Edit1: TEdit
+  inherited edtDeathTime: TEdit
     Position.X = 153.000000000000000000
     Position.Y = 71.000000000000000000
     Size.Width = 120.000000000000000000
     Size.Height = 32.000000000000000000
     Size.PlatformDefault = False
   end
-  inherited Label2: TLabel
+  inherited lbSPC: TLabel
     Position.Y = 128.000000000000000000
   end
-  inherited Label3: TLabel
+  inherited lbScanningSleep: TLabel
     Position.Y = 168.000000000000000000
     Size.Width = 134.000000000000000000
   end
-  inherited Edit2: TEdit
+  inherited edtSPC: TEdit
     Position.X = 153.000000000000000000
     Position.Y = 117.000000000000000000
     Size.Width = 120.000000000000000000
     Size.Height = 32.000000000000000000
     Size.PlatformDefault = False
   end
-  inherited Edit3: TEdit
+  inherited edtScanningSleep: TEdit
     Position.X = 153.000000000000000000
     Position.Y = 267.000000000000000000
     Size.Width = 120.000000000000000000
     Size.Height = 32.000000000000000000
     Size.PlatformDefault = False
   end
-  inherited Label4: TLabel
+  inherited lbScanningTime: TLabel
     Position.X = 10.000000000000000000
     Position.Y = 224.000000000000000000
   end
-  inherited Edit4: TEdit
+  inherited edtScanningTime: TEdit
     Size.Width = 120.000000000000000000
     Size.Height = 32.000000000000000000
     Size.PlatformDefault = False
   end
-  inherited Label9: TLabel
+  inherited lbTimerScan: TLabel
     Position.X = 10.000000000000000000
     Position.Y = 271.000000000000000000
+  end
+  inherited edtTimerScan: TEdit
+    Size.Height = 32.000000000000000000
+  end
+  inherited edtServerURL: TEdit
+    Size.Height = 32.000000000000000000
   end
 end
