--- a/MobileBus/app/GUI/AddBusStop.fmx
+++ b/MobileBus/app/GUI/AddBusStop.fmx
@@ -29,116 +29,6 @@ object AddBusStopForm: TAddBusStopForm
           PNG = {
             89504E470D0A1A0A0000000D4948445200000040000000400806000000AA6971
             DE000000017352474200AECE1CE90000000467414D410000B18F0BFC61050000
-            082C49444154785ED59B7F8C5C5515C7BFF7BED95FB6DD99D9B6026D05936E04
-            91448DF0879AE01F4AF027FC410454201A8291DD191A538DC65A496D302A6C64
-            3BBB8BD6480BAD69A1625049A14D63A449212A184D0085B4467E645B4B3B33DD
-            FED8CECEBC7B3DF7BDB3F37BCBCC7BF7BD8D9FE4BD3DE7DE79F7C7B9F79E7BEF
-            BB6F05E262E4BF4B217AAF07C467495B0BA92E01E42A3F524D43C9A3241C01F4
-            5EE8B97D98BAE88C1F172DD11BE09EE247A0B011429BCAF773E83BA0CF438B7D
-            90D88C2DA917393012A233C048FE3238E247D4A85F028603E673585367D90557
-            7F0F5343AF73A055A231C068FE06EADE3BA905977148236E690EAAEF387ADC63
-            9E5E762E862CBD1B4E5FAFA737A3709A6EB76172E8F71C620DFB06C8163750CB
-            6D6E69755D3E01241EA31C9FC0B1D441EC112EC7F87C513BB8B8782D346E022A
-            B740F4ACE018C6F486E18DC8A5EEE3002BD83540A6B00942FC80351FD37A0263
-            50A5B18E1D9B7198B26F3D19637D4B2FD2FA879848DFCB5A68EC19205BBC99EE
-            8FF94A957F40A81BB065E80DD6BBE39EFCA5D0D274FB0FFA01556EA19EF038CB
-            A1B0638091931F40C9F92BDE85010E21F453E83D7F2BC62E39EBA9E6373DB2C7
-            93DF89B22A636AF9CB9EBCFEE812CCF5EFA6A27EDED30DE7308B3EF79AEA6F42
-            60C70099C2D3D4F53FCD1AE1BE80C4D96BF1B34B67BD8A0B673775E5AB38F214
-            5DFFF1C516DE4B57D293145E82766FF52AF9CD37065059721070AEF6E23CD43E
-            E486EAF20C86E4BFC1C9143FD550F9B9CADB50EA46AFF206C759575779EA1895
-            9374FF53DBCB8FF331CF98670D262D93A649BB8ABCDECB3B24E17B40B6F01C25
-            F351D60C23343E1F62D9C4FF93EEFB3193FA8E1FD021CB8A3FA5D25D875CFAFD
-            1C62FCCCDD749FF215837E9EE23FC64A20C21960F4ED5590AFBF559DF2947A15
-            2BD2576193A878BA6134FF2F08B91D13A91F734867648ADF85565FA5B9FF0A0E
-            01EED5099C28BC04292FF703686A5497ADC1E4CA695FEF9E7043C0E921C75437
-            DF0BF1CB86CADBC6A46DF2A842797B65084E3803687C8E251F257EC7527434E7
-            D15C862E09E904F5FB58A0C55BE508A65287598B0E9387C9AB4A5D190210D200
-            620D0B341C120B4D6D845ECA42E708DD7E1F6168C8ABAE0C0108EE04B3270669
-            6D6FE6741FAD77D012F50ED66A1827E83BADDA6F3B23E939D57A27384FA6F028
-            F982DB59034A2A85AD43DDA6EF11BC0748A7E959EDCFFB0B631638DD5C17A029
-            AFBE44FB5D64070437C078BA4805F1B7B30621F8ED4E0C34E475B68CDC32DA69
-            06239C0F50C22C727C5CB19AA556DC529EBCF54F1A2EBCD5B81D06B635FE46D7
-            D26EA63E2F77C951E33058EB9A700BA16C61929218F1156A89D2C0CA96B1687C
-            80A1792C7FE5C4790C25FA58A3A6D01FA65EF577D628EDFC6EDA0F7CA8E5B9AF
-            E793E89BA525F112DE5885DB13849D05FCCA795081FAE5675869444E0FE3EEFC
-            B186ABBEF206553ED0100F7123C734E2E5315F7983D8CF4220C21AA0F185A58B
-            2FB35443CAF3C01A07097951C3D542EFF2C678D1EF3FDB444B1ECE332C04229C
-            017283CFD3BDF6B252E20BC89E6ADE9C1CE0BF8D689DA3B1FE8DEA05F51AC7D4
-            637689354CDA268F795CFD0A95E115D60211B60768AAC84E5618F5006D5A6AE9
-            CE24BF4FDBDC7FB36698F6E677A95F84A3FF5CBDB47C1965D0C66A9EB993E89D
-            DDC08AD908519A94763D8EF8394B8109E7040DEB4E5D0EA5EB7C01A1F100EDFE
-            BECD1A39C2C22148E1F70C8D9B296E8F2737335ABC8E9AC41FD3C668132BD67A
-            B22153BC9F4AFB2DD60CE76801B42AE802689E903D80184FBE4A2DF317D67C4C
-            413385BB5823C43AAAF883746DC0E9E41F38B095E3C93F528FA24AEA2DD0CE9D
-            1C6A567E773555DEB02B6CE50DE17B80215B1CA5FB84AFD4A1F57DD4DA1BBDA1
-            12082DA8E537D3C2A73614E611B8DAC6A9911D038C9E5A0E79861624F5D313A3
-            F53310CEFAAE9D5576E64A68778C2ADF668E775F406EF935AC84C28E010C99E2
-            93945AFBB9DB5BF5ADD901A9B6613A7DA8E550641E7338B2AAF07128F9357A86
-            363B347DB645DF895CFA61564261CF00A3859BC8D1FD86B585312744A2E759F2
-            076F92C2AFB2686D2FF01E8AFB44EB8950137328429F5D8DADABCF714828EC19
-            20AB6865779C86417F9A4322821C642EEDBF2DB640F859609E9C2CD16ACECA69
-            CD05914EE8B9BF1E7B0630E8C40E96A241E1598C0F2EBC4B0C805D034C0C1E6A
-            7C5F671907565BDF60D7008684D3B434B6857B1CE9E46F59B1867D034044340C
-            E4C3D824E658B1867D03E45247686FF01C6B76387C5851497FC19A5522E80184
-            108FB26487E1B5FB309EBEC06BF7E0446300178F235FA169D116BA76D86A9968
-            0CF050AA80A1C453AC85E54D1C4BEF65D93AD118C043D971861A5B17DC3B5820
-            3A03944CABCDD53E7808C24CA18244E257AC45427406D82ACAD03DBB590BC6D2
-            F4937870A9F9843632221C028690B381A3ADAFFC9AB1B71B5C88DAE16897A8D7
-            68D777051531F0A94F2744DC03082983394365BE058AB6F286E80DE02ADA1B98
-            CF5CBBE28CF7F62806A23780F9CA5B0D1F64AD43F476E456CCB01229D11BC020
-            7417C3C07CF92573AC444E4C0670F750ABB69EF3B543D3BA7F32D9EE982C12E2
-            3180D79D75875F90C92D2CC4423C063008A78335014D7D1383A14E7BBB253E03
-            A407F77B6F752E8436633FFAA9AF9EF80CE07D41EAEC62AD9559CC60A0FC086B
-            B1119F010C4A2F3C0C06B00DF7AF3CCD5A6CC46B80C9F4DFE8DEE69F1C68EA73
-            DB1CAEC640BC06F068B72658BB3796CF6CDBB00806707FEDBDE4AC4789719662
-            27FADD603B32C50394F3273DD97C0F3891BED293178145E80184AC7B5D26446C
-            CBDE762C8E012AE527E87ECE3BEAEE9DB5FB0AFDFF86D1C24E1A0A63AC2D1A8B
-            D3030C426C2707B028535F0DE07FC477A45F870FEBC20000000049454E44AE42
-            6082}
-          FileName = 'D:\'#193'rea de Trabalho\icon.png'
-        end>
-      Position.X = 104.000000000000000000
-      Position.Y = 56.000000000000000000
-      Size.Width = 44.000000000000000000
-      Size.Height = 44.000000000000000000
-      Size.PlatformDefault = False
-      Visible = False
-    end
-  end
-  object ToolBar1: TToolBar
-    Size.Width = 459.000000000000000000
-    Size.Height = 40.000000000000000000
-    Size.PlatformDefault = False
-    StyleLookup = 'ToolBar1Style1'
-    TabOrder = 0
-    object SpeedButton1: TSpeedButton
-      Align = Left
-      Size.Width = 57.000000000000000000
-      Size.Height = 40.000000000000000000
-      Size.PlatformDefault = False
-      StyleLookup = 'priortoolbutton'
-      Text = 'SpeedButton1'
-      OnClick = SpeedButton1Click
-    end
-    object CbbBeacons: TComboBox
-      Position.X = 343.000000000000000000
-      Position.Y = 10.000000000000000000
-      Size.Width = 106.000000000000000000
-      Size.Height = 22.000000000000000000
-      Size.PlatformDefault = False
-      TabOrder = 1
-    end
-    object Image2: TImage
-      MultiResBitmap.Height = 64
-      MultiResBitmap.Width = 64
-      MultiResBitmap = <
-        item
-          Width = 64
-          Height = 64
-          PNG = {
-            89504E470D0A1A0A0000000D4948445200000040000000400806000000AA6971
-            DE000000017352474200AECE1CE90000000467414D410000B18F0BFC61050000
             082D49444154785ED59B7F8C5C5515C7BFF7BED95FB6DD99D9B6026D45125A40
             245123FCA126F88712FC05FC410454301A8291DD191A538DC65A496D302A6C64
             3BBB8BD6482BAD69A1625049A14D63A449212A184D0085528340B6B5B433D3ED
@@ -208,6 +98,116 @@ object AddBusStopForm: TAddBusStopForm
             426082}
           FileName = 'D:\'#193'rea de Trabalho\icon.png'
         end>
+      Position.X = 104.000000000000000000
+      Position.Y = 56.000000000000000000
+      Size.Width = 44.000000000000000000
+      Size.Height = 44.000000000000000000
+      Size.PlatformDefault = False
+      Visible = False
+    end
+  end
+  object ToolBar1: TToolBar
+    Size.Width = 459.000000000000000000
+    Size.Height = 40.000000000000000000
+    Size.PlatformDefault = False
+    StyleLookup = 'ToolBar1Style1'
+    TabOrder = 0
+    object SpeedButton1: TSpeedButton
+      Align = Left
+      Size.Width = 57.000000000000000000
+      Size.Height = 40.000000000000000000
+      Size.PlatformDefault = False
+      StyleLookup = 'priortoolbutton'
+      Text = 'SpeedButton1'
+      OnClick = SpeedButton1Click
+    end
+    object CbbBeacons: TComboBox
+      Position.X = 343.000000000000000000
+      Position.Y = 10.000000000000000000
+      Size.Width = 106.000000000000000000
+      Size.Height = 22.000000000000000000
+      Size.PlatformDefault = False
+      TabOrder = 1
+    end
+    object Image2: TImage
+      MultiResBitmap.Height = 64
+      MultiResBitmap.Width = 64
+      MultiResBitmap = <
+        item
+          Width = 64
+          Height = 64
+          PNG = {
+            89504E470D0A1A0A0000000D4948445200000040000000400806000000AA6971
+            DE000000017352474200AECE1CE90000000467414D410000B18F0BFC61050000
+            082D49444154785ED59B7B8C5D451DC7BF33E7EECBB67BEFDDB6026D45097641
+            245123FCA126F887127CC21F848708464330B27B2F8DA94663ADA436181536B2
+            BDBB8BD6402BAD69A1625048A54D63A449212A184D0065B53E806C6B69F7DE6E
+            1FDBBBF79E197F73CE6FEF7BCBBDE7CC391B3FC939FBFBCDDC338FDFCCFC66E6
+            CC5981B818FAEF5288EEEB00F129D22E8554170172951FA9A6A0E411120E037A
+            2FF4DC3E4C5C70DA8F8B96E80D704FE18350D808A14DE57B39F42DD0E7A0C53E
+            486CC696D48B1C1809D1196068FA9D70C4F780BF7F0E180C98CFA406D6EE82AB
+            BF858981FF70A055A231C0F0F4F5D4BD77520B2EE3907ADCE21C54CF3174B947
+            3DBDE45C08597C3B9C9E6E4F6F44E114DD6EC7F8C0AF39C41AF60D902D6CA096
+            DBDCD4EABA741C483C46393E81A3A983D8235C8EF1B9493BB8B0700D346E04CA
+            B74074ADE018C6F486C18DC8A5EEE3002BD8354026BF09427C87351FD37A0223
+            50C591B61D9B7198B2673D19637D532FD2FABB184BDFCB5A68EC19205BB899EE
+            8FF94A85BF40A8EBB165E035D63BE39EE98BA1A5E9F6EFF3032ADC423DE17196
+            4361C7004327DE8BA2F347BC0D7D1C42E8A7D17DEE568C5C74C653CD6FBA6497
+            27BF152555C2C4F2973D79FD912598EBDD4D45FD8CA71BCE62163DEED595DF84
+            C08E0132F9DF50D7FF046B84FB021267AEC18F2E9EF52A2E9CDDD495AFE4C893
+            74FDDB179B78175D494F527809DABDD5ABE4575FEB4379C941C0B9CA8BF350FB
+            901BA8C9331892FF062753F8785DE5E7CA6F42A91BBCCA1B1C675D4DE5A96394
+            4FD0FD772D2F3FCEC73C639E3598B44C9A26ED0AF23A2FEF9084EF01D9FC7394
+            CC8758330CD1F87C886513FF57BAEFC74CEA1B7E409B2C2BFC904A772D72E9F7
+            7088F13377D37DC2570CFA798AFF302B81086780E1375741FEEB8DCA94A7D4AB
+            5891BE129B44D9D30DC3D37F8390DB3196FA3E87B447A6F04D68F5459AFB2FE7
+            10E05E9DC0F1FC4B90F2323F80A64675C91A8CAF9CF2F5CE0937049C2E724C35
+            F3BD103FADABBC6D4CDA268F0A94B75786E0843380C6A759F251E2572C454763
+            1E8D65E890904E500FB2408BB7F2614CA4FEC15A74983C4C5E156ACA10809006
+            106B58A0E19058686A23F45216DA47E8D6FB08435D5E356508407027983DDE4F
+            6B7B33A7FB68BD8396A85F60AD8A7182BED3AAFEB63D929E53AD7582F364F28F
+            922FB88335A0A852D83AD069FA1EC17B80741A9ED5FEBCBF306681D3C9751E1A
+            F2EA49B4DE45B64170038CA60B54107F3B6B1082DFEEC4405D5E674AC82DA39D
+            6630C2F90025CC22C7C715AB596AC62D4E93B7FE41DD8537EAB7C3C0B6FADFE8
+            6ADA8DD4E6E52E39621C066B1D136E2194CD8F531243BE422D51EC5BD934168D
+            0F30348EE5CF1F3F8781440F6BD414FA03D4ABFECC1AA53DBD9BF603EF6F7AEE
+            CBD349F4CCD29278096FACC2ED09C2CE027EE53CA840BDF293ACD423A7DE8DBB
+            A78FD65DB59537A8D281BA78881B38A61E2F8FF9CA1BC47E160211D600F52F2C
+            5DDCC6521529CF016B1C24E405755713DDCBEBE345AFFF6C034D7938CFB01088
+            7006C8F53F4FF7EACB4A89CF227BB271737280FFD6A3758EC6FA572A17D424C7
+            D4627689554CDA268F795CFD0A95E115D60211B60768AAC84E5618F5006D5AAA
+            E9CE24BF4DDBDC7FB26698F2E677A95F84A37F5FB9B47C1925D0C66A9EB913E8
+            9EDDC08AD908519A94762D8EF8314B8109E7040DEB4E5E06A56B7C01A1F100ED
+            FEBECE1A39C2FC2148E1F70C8D9B296E8F2737325CB8969AC41FD3C668632B2E
+            F56443A6703F95F66BAC19CED2026855D005D03C217B00319A7C955AE60FACF9
+            988266F277B146887554F107E9DA8053C9A738B09963C9DF528FA24AEA2DD0CE
+            9D1C6A567E773554DEB02B6CE50DE17B80215B18A6FB98AFD4A0F57DD4DA1BBD
+            A112082DA8E537D3C2A73A14E611B8CAC6A9911D030C9F5C0E799A1624B5D313
+            A3F53310CEFA8E9D5576E60A6877842ADF628E775F406EF9D5AC84C28E010C99
+            C293945AEBB9DB5BF5ADD901A9B6612A7DA8E950641E7338B22AFF1128F9257A
+            86363B347DB644DF895CFA11564261CF00C3F91BC9D1FD82B585312744A2EB59
+            F207AF93C2AFB2686D2FF00E8AFB68F38950037328409F598DADABCF724828EC
+            1920AB6865778C86416F9A4322821C642EEDBF2DB640F859609E9C2CD26ACECA
+            69CD79914EE8B9BF167B0630E8C40E96A241E1598CF62FBC4B0C805D038CF51F
+            AA7F5F671907565BDF60D7008684D3B034B6857B0CE9E42F59B1867D03404434
+            0CE423D824E658B1867D03E45287696FF01C6B76989C5454D29FB06695087A00
+            21C4A32CD96170ED3E8CA6CFF3DA3D38D118C0C5E3982ED3B4680B5D3D6CB54C
+            3406782895C740E269D6C2F23A8EA6F7B26C9D680CE0A1EC38438DAD0BEE1D2C
+            109D018AA6D5E6AA1F3C0461265F4622F1306B91109D01B68A1274D76ED682B1
+            34FD241E5C6A3EA18D8C08878021E46CE068EB2BBF46ECED0617A27A38DA216A
+            92767D975311039FFAB443C43D809032983354E65BA0682B6F88DE00AEA2BD81
+            F9CCB5234E7B6F8F62207A0398AFBCD5E041D6DA446F476EC50C2B9112BD010C
+            4277300CCC975F32C74AE4C46400770FB56AF3395F2B34ADFBC793AD8EC92221
+            1E0378DD59B7F90599DCC2422CC463008370DA5813D0D437D61FEAB4B753E233
+            40BA7FBFF756E77C6833F6A39FFA6A89CF00DE17A4CE2ED69A99C50CFA4A3F63
+            2D36E2338041E98587411FB6E1FE95A7588B8D780D309EFE13DD5BFC93034D7D
+            6E8BC3D51888D7001EADD6046BF7C6F2996D0B16C100EECFBD979CB52831CA52
+            EC44BF1B6C45A6708072FE98279BEF01C7D25778F222B0083D809035AFCB8488
+            6DD9DB8AC53140B9F404DDCF7A47DDDDB3765FA1FFDF309CDF49436184B54563
+            717A804188EDE4001665EAAB02FC0F72DAA45F03CE458C0000000049454E44AE
+            426082}
+          FileName = 'D:\'#193'rea de Trabalho\icon.png'
+        end>
       Position.X = 80.000000000000000000
       Position.Y = -4.000000000000000000
       Size.Width = 44.000000000000000000
@@ -215,9 +215,11 @@ object AddBusStopForm: TAddBusStopForm
       Size.PlatformDefault = False
       Visible = False
     end
-  end
-  object LocationSensor: TLocationSensor
-    Left = 216
-    Top = 224
+    object EditDescription: TEdit
+      Touch.InteractiveGestures = [LongTap, DoubleTap]
+      TabOrder = 2
+      Position.X = 240.000000000000000000
+      Position.Y = 10.000000000000000000
+    end
   end
 end
